--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,19 @@ body {
   background-color: var(--primary-light-color);
 }
 
+.logo {
+  font-family: var(--secondary-font);
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.logo > span {
+  color: var(--primary-accent-color);
+}
+
 /* ====== /cкидання стилів ====== */
 
 /* ====== PAGE HEADER ====== */
@@ -66,23 +79,12 @@ body {
   border-bottom: 1px solid var(--accent-light-color);
   padding: 24px 156px;
 }
-.page-header-logo {
-  font-family: var(--secondary-font);
-  font-size: 18px;
-  font-weight: 800;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  color: var(--secondary-dark-color);
-  text-transform: uppercase;
-}
 
-.page-header-logo > span {
-  color: var(--primary-accent-color);
+.page-navigation > .logo {
+  color: var(--secondary-dark-color);
 }
 
 .menu-link {
-  font-family: sans-serif;
-  font-size: 16px;
   font-weight: 500;
   color: var(--secondary-dark-color);
 }
@@ -95,13 +97,12 @@ body {
 
 /* ====== HERO ====== */
 .hero {
-  /* width: 100%; */
   height: 600px;
   background-color: var(--secondary-dark-color);
 }
 
 .hero-cta {
-  padding: 188px 0 188px 0;
+  padding: 188px 0;
   text-align: center;
 }
 
@@ -168,8 +169,8 @@ body {
 
 .team {
   padding: 120px 156px;
-  background-color: var(--secondary-light-color);
   text-align: center;
+  background-color: var(--secondary-light-color);
 }
 
 .team-item {
@@ -204,7 +205,7 @@ body {
   line-height: 1.5;
 }
 /* ====== /TEAM ====== */
-/* ====== PORTFOLIO ====== */
+/* ====== PORTFOLIO PAGE ====== */
 .portfolio {
   padding: 96px 156px;
 }
@@ -267,7 +268,24 @@ body {
   margin: 0;
   padding-top: 8px;
 }
-/* ====== /PORTFOLIO ====== */
+/* ====== /PORTFOLIO PAGE ====== */
 
 /* ====== FOOTER ====== */
+
+.footer {
+  width: 100%;
+  padding: 100px 156px;
+  color: var(--secondary-light-color);
+  background-color: var(--secondary-dark-color);
+}
+
+.footer > .logo {
+  color: var(--secondary-light-color);
+}
+
+.footer-text {
+  width: 264px;
+  margin-bottom: 0;
+}
+
 /* ====== /FOOTER ====== */
